--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,6 @@ doctype 5
 html
   head
     title= title
-    link(href='./css/index.css', rel='stylesheet')
+    link(href='css/index.css', rel='stylesheet')
   body
     block content
