--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,6 @@ doctype 5
 html
   head
     title= title
-    link(href='/public/css/style.css', type="text/css")
+    link(href='css/style.css', type="text/css", rel="stylesheet")
   body
     block content
