--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,17 @@
 * {
-    background-color: brown;
+    font-family: monospace;
+    background-color: #ececec;
+}
+
+body {
+    padding: 5px 100px;
+}
+
+.index-title {
+    text-align: center;
+    font-size: 40px;
+}
+
+.sub-title {
+    font-size: 15px;
 }
