--- a/views/index.jade
+++ b/views/index.jade
@@ -18,5 +18,4 @@ block content
                     td #{record.id}
                     td #{record.time.toLocaleString()}
                     td #{record.version}
-                    td
-                        a(href='view/' + record.id) View
+                    td #{View}
