--- a/views/view.pug
+++ b/views/view.pug
@@ -1,7 +1,10 @@
 extends layout
 
 block content
-  pre
-    for v, k in fields
-      = k + ": " + v + "\n"
-  pre= report
+    .fields
+    pre
+        for v, k in fields
+            = k + ": " + v + "\n"
+
+    .report
+    pre= report
