--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype 5
 html
   head
     title= title
+    base(href='/')
     link(href='css/index.css', type="text/css", rel="stylesheet")
   body
     block content
