--- a/views/view.pug
+++ b/views/view.pug
@@ -5,9 +5,8 @@ block content
 
     .fields
         for v, k in fields
-            .field
-                #{k} :
-                    .bold #{v}
+            .field #{k} :
+            .bold #{v}
 
     .report
         pre= report
