--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,9 @@
 doctype 5
 html
   head
-    title= title
+    title='Crash report'
     base(href='/')
     link(href='css/index.css', type="text/css", rel="stylesheet")
+    link(href='img/favicon.png', type="image/png", rel="icon")
   body
     block content
