--- a/views/view.pug
+++ b/views/view.pug
@@ -5,7 +5,7 @@ block content
 
     .fields
         for v, k in fields
-            .field #{k}: 
+            .field #{k}:&nbsp;
                 .bold #{v}
 
     .report
