--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,6 @@ html
     title='Crash report'
     base(href='/')
     link(href='css/index.css', type="text/css", rel="stylesheet")
-    link(href='img/favicon.png', type="image/png", rel="icon")
+    link(href='favicon.png', type="image/png", rel="icon")
   body
     block content
