--- a/views/index.pug
+++ b/views/index.pug
@@ -27,7 +27,7 @@ block content
 						a(href='view/' + record.id) View
 					td.delete Delete
 
-script
+script.
 	$(document).ready(function(){
 		$(".delete").click(function() {
 			alert("click");
