--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,5 +5,6 @@ html
     base(href='/')
     link(href='css/index.css', type="text/css", rel="stylesheet")
     link(href='favicon.png', type="image/png", rel="icon")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
   body
     block content
