--- a/views/index.pug
+++ b/views/index.pug
@@ -25,11 +25,13 @@ block content
 					td #{record.version}
 					td
 						a(href='view/' + record.id) View
-					td.delete Delete
+					td.delete(id=record.id) Delete
 
 	script.
 		$(document).ready(function(){
-			$(".delete").click(function() {
-				alert("click");
-				});
+			$(".delete").click(function(e) {
+				console.log(e.id)
+				var key = prompt("Please enter API key:", "123-some-API-key");
+				window.location.href = `delete-dump/123?key=${key}`;
+			});
 		});
