--- a/views/index.pug
+++ b/views/index.pug
@@ -29,7 +29,7 @@ block content
 
 	script.
 		$(document).ready(function(){
-			$(".delete").click(function(e) {
+			$(".delete-action").click(function(e) {
 				var key = prompt("Please enter API key:", "123-some-API-key");
 				if (key === null) {
 					return;
