replace dumpName with deviceId

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block content
 			tr
 				th Id
 				th Date
-				th Dump file name
+				th DeviceId
 				th App version
 				th App environment
 				th Electron version
@@ -19,7 +19,7 @@ block content
 				tr.record-row
 					td #{record.id}
 					td #{record.time.toLocaleString()}
-					td #{record.dumpName}
+					td #{record.deviceId}
 					td #{record.appVersion}
 					td #{record.appEnvironment}
 					td #{record.version}
